@@ -1,3 +1,7 @@
+Wed Dec 17 22:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* gtkprefs.c: Replace clist control with tree view
+
 Wed Dec 17 10:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* util.c: Dodgy temp file fix to get export to gol working.
